--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">MarvelApp</string>
+
+    <string name="characterimage">CharacterImage</string>
+    <string name="iron_man">Iron Man</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="gradientimg">gradientImg</string>
+    <string name="marvel">Marvel</string>
+    <string name="Description" />
+    <string name="description">Description</string>
+    <string name="comicsimage">ComicsImage</string>
 </resources>
