--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="Description" />
     <string name="description">Description</string>
     <string name="comicsimage">ComicsImage</string>
+    <string name="search_by_character_name">Search by Character name</string>
 </resources>
